<resources>
    <string name="app_name">PDM_2022_I_P3_EQUIPO3</string>
    <string-array name="spnSexo">
        <item> Masculino</item>
        <item> Femenino</item>
    </string-array>
    <string-array name="spnBusquedaIDNombre">
        <item> ID</item>
        <item> Nombre</item>
    </string-array>
    <string-array name="spnBusquedaIDNumero">
        <item> ID</item>
        <item> #Carnet</item>
    </string-array>
    <string-array name="spnDosis">
        <item> Primera Dosis</item>
        <item> Segunda Dosis</item>
        <item> Tercera Dosis</item>
        <item> Cuarta Dosis</item>
        <item> Otras</item>
    </string-array>
    <string-array name="spnBusquedaIDDepartamento">
        <item> ID</item>
        <item> Depto.</item>
    </string-array>
    <string name="user">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="password_recuperar">¿Olvido su contraseña?</string>
    <string name="user_nuevo">¿No tiene una cuenta de usuario?</string>
    <string name="registrar_user">Registrar</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="btn_enfermeros">Enfermeros</string>
    <string name="enfermero_recyclerview">imagen enfermero recyclerview</string>
    <string name="btn_eliminar_efermeror">Eliminar</string>
    <string name="btn_editar_enfermeror">Editar</string>
    <string name="txt_nombre_buscar">Nombre</string>
    <string name="btn_enfermerosR">boton buscar enfermeros re</string>
    <string name="id_txtre">ID</string>
    <string name="nombre_enfermero">Nombre</string>
    <string name="dni_enfermero">DNI</string>
    <string name="cargo_enfermero">Cargo</string>
    <string name="numero_de_telefono_enfermero">Numero de Telefono</string>
    <string name="correo_electronico_enfermero">Correo Electronico</string>
    <string name="login">Login</string>
    <string name="btn_civiles">Civiles</string>
    <string name="btn_usuarios">Usuarios</string>
    <string name="btn_vacuna">Vacunas</string>
    <string name="btn_carnet">Carnet de Vacunación</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_registrar_enfermero">RegistrarEnfermeroActivity</string>
    <string name="agregar_imagen_enfermero">Agregar Imagen</string>
    <string name="codigo_enfermero">Código</string>
    <string name="imagen_galeria">imagen galeria</string>
    <string name="registrar_enfermero">Registrar</string>
    <string name="actualizar_enfermero">Actualizar</string>
    <string name="title_activity_ver_civiles">VerCivilesActivity</string>
    <string name="buscar_dni">DNI</string>
    <string name="title_activity_registrar_civil">RegistrarCivilActivity</string>
    <string name="id_civil">ID</string>
    <string name="dni_civil">DNI</string>
    <string name="nombre_civil">Nombre</string>
    <string name="apellido_civil">Apellido</string>
    <string name="numero_telefono_civil">Numero de Telefono</string>
    <string name="direccion_civil">Dirección</string>
    <string name="fecha_de_nacimiento_civil">Fecha de Nacimiento</string>
    <string name="nombre_vacuna">Nombre</string>
    <string name="fabricante_vacuna">Fabricante</string>
    <string name="fecha_f_vacuna">Fecha F</string>
    <string name="fecha_v_vacuna">Fecha V</string>
    <string name="numero_lote_vacuna">Numero Lote</string>
    <string name="title_activity_ver_vacunas">VerVacunasActivity</string>
    <string name="id_vacuna">ID</string>
    <string name="title_activity_registrar_vacuna">RegistrarVacunaActivity</string>
    <string name="nombre_del_fabricante_vacuna">Nombre del Fabricante</string>
    <string name="nombre_de_vacuna">Nombre de la Vacuna</string>
    <string name="numero_de_lote_vacuna">Numero de Lote</string>
    <string name="fecha_de_fabricacion_vacuna">Fecha de Fabricación</string>
    <string name="fecha_de_vencimiento_vacuna">Fecha de Vencimiento</string>
    <string name="title_activity_ver_carnet_vacunacion">VerCarnetVacunacionActivity</string>
    <string name="nombre_carnet">Nombre</string>
    <string name="centro_salud_carnet">Centro de Salud</string>
    <string name="fecha_carnet">Fecha</string>
    <string name="numero_telefono_carnet">Numero de Telefono</string>
    <string name="nombre_del_vacunador_carnet">Nombre del Vacunador</string>
    <string name="tipo_de_vacuna_carnet">Tipo de Vacuna</string>
    <string name="dni_carnet">DNI</string>
    <string name="title_activity_registrar_carnet">RegistrarCarnetActivity</string>
    <string name="title_activity_ver_usuario">VerUsuarioActivity</string>
    <string name="correo_usuario">Correo Electronico</string>
    <string name="contra_usuario">Contraseña Usuario</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="id_usuario">ID</string>
    <string name="user_usuario">Usuario</string>
    <string name="correo_electronico_usuario">Correo Electronico</string>
    <string name="confirmar_contra_usuario">Confirmar Contraseña</string>
    <string name="contraseña_usuario">Contraseña</string>
    <string name="title_activity_registrar_region_sanitaria">RegistrarRegionSanitaria</string>
    <string name="region_sanitaria">Region Sanitaria</string>
    <string name="title_activity_registrar_municipio">RegistrarMunicipio</string>
    <string name="registrar_region">REGISTRAR</string>
    <string name="actualizar_region">ACTUALIZAR</string>
    <string name="btn_municipios">Municipios</string>
    <string name="title_activity_registrar_establecimiento_salud">RegistrarEstablecimientoSalud
    </string>
    <string name="btn_establecimientos_de_salud">Establecimientos de Salud</string>
    <string name="title_activity_registrar_centro_vacunacion">RegistrarCentroVacunacion</string>
    <string name="btn_centros_vacunacion">Centros de Vacunación</string>
    <string name="title_activity_ver_region_sanitaria">VerRegionSanitaria</string>
    <string name="title_activity_ver_municipios">VerMunicipiosActivity</string>
    <string name="title_activity_ver_establecimientos">VerEstablecimientosActivity</string>
    <string name="title_activity_ver_centro_vacunacion">VerCentroVacunacionActivity</string>
    <string name="title_activity_registrar_comorbilidad">RegistrarComorbilidad</string>
    <string name="title_activity_ver_comorbilidades">VerComorbilidadesActivity</string>
    <string name="title_activity_registrar_doctor">RegistrarDoctorActivity</string>
    <string name="title_activity_ver_doctores">VerDoctoresActivity</string>
    <string name="title_activity_registar_fabricante">RegistarFabricanteActivity</string>
    <string name="title_activity_ver_fabricantes">VerFabricantesActivity</string>
    <string name="title_activity_registrar_unidad">RegistrarUnidadActivity</string>
    <string name="title_activity_ver_unidades">VerUnidadesActivity</string>
    <string name="detalles_carnet">Detalles</string>
    <string name="numero_de_carnet">Numero de Carnet</string>
    <string name="id_nombre_carnet">Nombre Paciente</string>
    <string name="id_carnet_carnet">ID Carnet</string>
    <string name="id_carnet_detalle_detalle">ID Carnet Detalle</string>
    <string name="id_unidad_detalle">ID Unidad</string>
    <string name="fecha_detalle">Fecha</string>
    <string name="dosis_de_vacuna_detalle">Dosis de Vacuna</string>
    <string name="nombre_empleado_vacunador_detalle">Nombre Empleado Vacunador</string>
    <string name="observacion_detalle">Observacion</string>
    <string name="buscar_id_detalle">ID</string>
    <string name="id_carnet_detalle_d">ID Carnet Detalle</string>
    <string name="id_carnet">ID Carnet</string>
    <string name="id_unidad_de_vacunacion">ID Unidad</string>
    <string name="numero_de_dosis">Numero de Dosis</string>
    <string name="id_vacunador">ID Vacunador</string>
    <string name="observaciones_detalle">Observaciones</string>
    <string name="registrar_detalle_btn">Registrar</string>
    <string name="ver_lista_detalle_btn">Ver Lista</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carnet_titulo">Carnet</string>
    <string name="fecha_llegada_vacuna">Fecha de Llegada</string>
    <string name="id_nombre_pais">Nombre: Pais</string>
    <string name="id_paises">ID: Pais</string>
    <string name="id_codigo_de_area">Codigo de Area</string>
    <string name="codigo_iso_P">Codigo ISO</string>
    <string name="codigo_de_area">Codigo de Area</string>
    <string name="nombre_del_pais">Nombre del Pais</string>
    <string name="codigo_iso">Codigo ISO</string>
    <string name="id_pais">ID Pais</string>
    <string name="btn_paises">Paises</string>
    <string name="title_activity_registar_civil_comorbilidad">RegistarCivilComorbilidadActivity
    </string>
    <string name="title_activity_ver_civil_comorbilidad">VerCivilComorbilidadActivity</string>
</resources>