<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnEnfermeros"
                android:layout_width="185dp"
                android:layout_height="60dp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="125dp"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/ic_btn_enfermeros"
                android:text="@string/btn_enfermeros" />

            <Button
                android:id="@+id/btnCiviles"
                android:layout_width="185dp"
                android:layout_height="60dp"
                android:layout_marginStart="125dp"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/ic_btn_civiles"
                android:text="@string/btn_civiles" />

            <Button
                android:id="@+id/btnUsuarios"
                android:layout_width="185dp"
                android:layout_height="60dp"
                android:layout_marginStart="125dp"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/ic_btn_user"
                android:text="@string/btn_usuarios" />

            <Button
                android:id="@+id/btnVacuna"
                android:layout_width="185dp"
                android:layout_height="60dp"
                android:layout_marginStart="125dp"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/ic_btn_vacuna"
                android:text="@string/btn_vacuna" />

            <Button
                android:id="@+id/btnCarnet"
                android:layout_width="185dp"
                android:layout_height="60dp"
                android:layout_marginStart="125dp"
                android:layout_marginBottom="12dp"
                android:drawableLeft="@drawable/ic_btn_carnet"
                android:text="@string/btn_carnet" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>