<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im_fondo4"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <EditText
        android:id="@+id/txtIdEnfermero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/txt_registros"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/id_txtre"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtCodigoEnfermero"
        app:layout_constraintEnd_toEndOf="@+id/txtCodigoEnfermero"
        app:layout_constraintStart_toStartOf="@+id/txtCodigoEnfermero"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCodigoEnfermero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/txt_registros"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/codigo_enfermero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtDniEnfermero"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdEnfermero" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:scaleType="fitXY"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/imagen_galeria"
        app:layout_constraintBottom_toTopOf="@+id/txtDniEnfermero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCodigoEnfermero"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/ic_no_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="33dp"
        android:text="@string/agregar_imagen_enfermero"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombreEnfermero"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/txt_registros"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/nombre_enfermero"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtCargoEnfermero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDniEnfermero" />

    <EditText
        android:id="@+id/txtCorreoEnfermero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="53dp"
        android:background="@drawable/txt_registros"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/correo_electronico_enfermero"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrarEnfermero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefonoEnfermero" />

    <EditText
        android:id="@+id/txtCargoEnfermero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/txt_registros"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/cargo_enfermero"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtTelefonoEnfermero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreEnfermero" />

    <Button
        android:id="@+id/btnActualizarEnfermero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/btn_otro"
        android:text="@string/actualizar_enfermero"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegistrarEnfermero" />

    <EditText
        android:id="@+id/txtTelefonoEnfermero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/txt_registros"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/numero_de_telefono_enfermero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtCorreoEnfermero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCargoEnfermero" />

    <Button
        android:id="@+id/btnRegistrarEnfermero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/btn_otro"
        android:text="@string/registrar_enfermero"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnActualizarEnfermero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoEnfermero" />

    <EditText
        android:id="@+id/txtDniEnfermero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/txt_registros"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/dni_enfermero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreEnfermero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodigoEnfermero" />

</androidx.constraintlayout.widget.ConstraintLayout>